--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
+.App{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  background-color:#245073;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+.header__icon {
+  object-fit: contain;
+  height: 70px;
+  margin-left: 30px;
+}
+
+
+
+p{
+  font-weight: bold;
+}
+h3{
+  text-align: center;
+  font-size: 25px;
+}
+.home__section{
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  margin: 30px;
+  
+}
+.search-box{
+  display: flex;
+  flex-direction: row;
+  border-width: 10px;
+  border: 2px solid #ebebeb;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  justify-content: flex-start;
+  padding: 10px;
+  margin-left: 210px;
+  margin-right: 210px;
+  max-height: 70px;
+}
+
+.header__center {
+  display: flex;
+  justify-items: center;
+  border: 0px;
+  border-radius: 15px;
+  background-color: #e5e4f2;
+  width: 270px;
+}
+
+.header__center > input {
+  border: none;
+  padding: 10px;
+  outline-width: 0;
+  background-color:#e5e4f2;
+  width: 200px;
+}
+.search-icon{
+  margin: 7px;
+}
+
+.body{
+  margin-left: 150px;
+  margin-right: 150px;
+}
+.search-d-h{
+  font-weight: 500;
+  font-size: 36px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+.btn{
+  border-radius: 5px;
+  border-width: 0px;
   color: white;
+  background-color: slateblue;
+  width: 120px;
+  height: 30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
+             
